packages/bcode/tests/ui/default_fail/testing_feature_is_opt_in.rs
use bcode::testing::ScriptedProvider;

fn main() {
    let _provider = ScriptedProvider::new([]);
}
